# MAI_labs_CG

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  run.sh
include/: base.hpp  scene.hpp
include/figures/: cube.hpp
include/veekay/: Camera.h  Lights.h  application.hpp  graphics.hpp  input.hpp  types.hpp  veekay.hpp
report_pattern/: report.aux  report.out  report.tex
report_pattern/src/: literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
report_pattern/styles/: log-style.sty
shaders/: shader.frag  shader.vert  shadow.frag  shadow.vert
source/: graphics.cpp  input.cpp  scene.cpp  veekay.cpp
source/figures/: cube.cpp
testbed/: CMakeLists.txt  main.cpp
